# node-glfw

./: .gitignore  .npmignore  CMakeLists.txt  generate-constants.js  index.d.ts  index.d.ts.in  index.in.d.ts  index.js  node_glfw_release.node  package-lock.json  package.json  test.js
.github/workflows/: main.yml
src/: addon.cpp  constants.cpp  constants.cpp.in  constants.hpp  utils.hpp  window.cpp  window.hpp
